src/objects/LTX_Credit_Details__c.object
<CustomObject>
    <fields>
        <fullName>LTX_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit_Details</relationshipLabel>
        <relationshipName>Credit_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LTX_Credit_Recommendation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Recommendation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTX_Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTX_Current_Balance_in_Account__c</fullName>
        <label>Current Balance in Account</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTX_Existing_Loan_Exposer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Loan Exposer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTX_Existing_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTX_Total_Bank_Accounts__c</fullName>
        <label>Total Bank Accounts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Credit Details</label>
    <nameField>
        <label>Credit Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>